--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,7 @@ upload_speed = 512000
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
 build_flags =
-	;-DMACHINE_FILENAME=test_drive.h ;Remove ";" from the beginning of this line and specify the machine file
+	-DMACHINE_FILENAME=cyclone_pcb_factory.h ;Remove ";" from the beginning of this line and specify the machine file
 	-DCORE_DEBUG_LEVEL=0
 	-Wno-unused-variable
 	-Wno-unused-function
