--- a/platformio.ini
+++ b/platformio.ini
@@ -22,17 +22,20 @@ lib_deps_builtin =
 
 [env:nodemcu-32s]
 lib_deps = 
+	WiFi@1.0
 	TMCStepper
 	arduinoWebSockets
 	ESP32SSPD
 platform = espressif32
-board = nodemcu-32s
+board = esp32dev ;nodemcu-32s
 framework = arduino
 upload_speed = 512000
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
+upload_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.SLAB_USBtoUART
 build_flags =
-	-DMACHINE_FILENAME=cyclone_pcb_factory.h ;Remove ";" from the beginning of this line and specify the machine file
+	-DMACHINE_FILENAME=cyclone_pcb_factory.h
 	-DCORE_DEBUG_LEVEL=0
 	-Wno-unused-variable
 	-Wno-unused-function
