--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev ;nodemcu-32s
 framework = arduino
+board_build.f_flash = 40000000L ; Custom FLASH Frequency
 upload_speed = 512000
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
